--- a/week6/index.qmd
+++ b/week6/index.qmd
@@ -117,53 +117,43 @@ p2
 
 ## Row percentages
 
-```{r}
+```{r, out.width="200%"}
 knitr::include_graphics("tab1.png")
 ```
 
-#
+# 
 
-:::: {.columns}
-
+::: columns
 ::: {.column width="50%"}
-
 ## Counts
 
 ```{r}
 p1
 ```
 
-```{r}
+```{r, out.width="200%"}
 knitr::include_graphics("tab1.png")
 ```
-
-
 :::
 
-
 ::: {.column width="50%"}
-
 ## Percentages
 
 ```{r}
 p2
 ```
-
 :::
-
-::::
+:::
 
 # Column Percentages
 
-```{r}
+```{r, out.width="200%"}
 knitr::include_graphics("tab2.png")
 ```
 
-##
+## 
 
-
-:::: {.columns}
-
+::: columns
 ::: {.column width="50%"}
 ### Counts
 
@@ -181,15 +171,12 @@ scale_fill_brewer(palette = "Dark2")
 
 ```
 
-```{r}
+```{r, out.width="200%"}
 knitr::include_graphics("tab2.png")
 ```
 :::
 
-
-
 ::: {.column width="50%"}
-
 ### Percentages
 
 ```{r}
@@ -210,18 +197,14 @@ p3 <- ggplot(pf4, aes(x = factor(BMI_category), y = col_percentage, fill = facto
  scale_fill_brewer(palette = "Dark2")
 p3
 ```
-
 :::
-
-::::
+:::
 
 # Staked Bar Chart
 
-##
+## 
 
-
-:::: {.columns}
-
+::: columns
 ::: {.column width="50%"}
 ### Counts
 
@@ -239,15 +222,12 @@ scale_fill_brewer(palette = "Dark2")
 
 ```
 
-```{r}
+```{r, out.width="200%"}
 knitr::include_graphics("tab2.png")
 ```
 :::
 
-
-
 ::: {.column width="50%"}
-
 ### Percentages
 
 ```{r}
@@ -262,18 +242,12 @@ pf2 |>
   geom_text(aes(label=paste0(sprintf("%1.1f", pct),"%")),
             position=position_stack(vjust=0.5)) + scale_fill_brewer(palette = "Dark2")
 ```
-
-
-
+:::
 :::
 
-::::
+## 
 
-##
-
-
-:::: {.columns}
-
+::: columns
 ::: {.column width="50%"}
 ### Counts
 
@@ -291,15 +265,12 @@ scale_fill_brewer(palette = "Dark2") + coord_flip()
 
 ```
 
-```{r}
+```{r, out.width="200%"}
 knitr::include_graphics("tab2.png")
 ```
 :::
 
-
-
 ::: {.column width="50%"}
-
 ### Percentages
 
 ```{r}
@@ -314,107 +285,206 @@ pf2 |>
   geom_text(aes(label=paste0(sprintf("%1.1f", pct),"%")),
             position=position_stack(vjust=0.5)) + scale_fill_brewer(palette = "Dark2") + coord_flip()
 ```
-
-
-
 :::
-
-
-::::
+:::
 
 ## Percentage chart
 
-:::: {.columns}
-
+::: columns
 ::: {.column width="50%"}
-
 **Advantages**
 
-- Shows the proportion of each category relative to the whole, making it easier to understand the distribution.
+-   Shows the proportion of each category relative to the whole, making it easier to understand the distribution.
 
-- Allows for fair comparisons between different groups or categories, regardless of their size.
+-   Allows for fair comparisons between different groups or categories, regardless of their size.
 
-- Highlights the relative importance of different categories within each group.
-
+-   Highlights the relative importance of different categories within each group.
 :::
 
 ::: {.column width="50%"}
-
 **Disadvantages**
 
-- Doesn’t provide the raw counts, which might be necessary for understanding the actual volume or size of each category.
-
-
+-   Doesn’t provide the raw counts, which might be necessary for understanding the actual volume or size of each category.
 :::
-::::
+:::
 
 ## Counts chart
 
-:::: {.columns}
-
+::: columns
 ::: {.column width="50%"}
-
 **Advantages**
 
-- Clearly shows the  frequency of each category, providing a direct understanding of the volume or size.
+-   Clearly shows the frequency of each category, providing a direct understanding of the volume or size.
 
-- Useful when the actual count is crucial for decision-making.
-
+-   Useful when the actual count is crucial for decision-making.
 :::
 
 ::: {.column width="50%"}
-
 **Disadvantages**
 
-- Difficulties arise when comparing groups, especially when their sizes differ.
-
+-   Difficulties arise when comparing groups, especially when their sizes differ.
 :::
-::::
-
-
+:::
 
 ## Grouped Bar Chart (Percentage)
 
-:::: {.columns}
-
+::: columns
 ::: {.column width="50%"}
 **Advantages**
 
-- Comparison within groups: It allows for easy comparison of values within each category group.
+-   Comparison within groups: It allows for easy comparison of values within each category group.
 
-- Comparison between groups: It also facilitates comparison between different category groups.
+-   Comparison between groups: It also facilitates comparison between different category groups.
 :::
 
 ::: {.column width="50%"}
 **Disadvantages**
 
-- If there are too many groups or variables, the bars can become narrow, making it difficult to read.
+-   If there are too many groups or variables, the bars can become narrow, making it difficult to read.
 
-- Complexity with many groups: With a large number of groups or variables, the chart can become crowded and hard to read.
+-   Complexity with many groups: With a large number of groups or variables, the chart can become crowded and hard to read.
 
-- Difficulty in showing totals: It's not straightforward to show the total magnitude of each category since bars are grouped.
+-   Difficulty in showing totals: It's not straightforward to show the total magnitude of each category since bars are grouped.
 :::
-::::
+:::
 
-## Stacked Bar Chart: Advantages
+## Stacked Bar Chart
 
-:::: {.columns}
-
+::: columns
 ::: {.column width="50%"}
 **Stacked Count Chart**
 
-- Allows viewers to see how totals accumulate as each category is stacked on top of one another.
+-  Allows viewers to see how totals accumulate as each category is stacked on top of one another.
+
+- Useful for comparing the total magnitude of each category across different groups or segments.
+
+- Ideal when the emphasis is on the total quantity of items in each category rather than their relative proportions.
+
+
 
 :::
 
 ::: {.column width="50%"}
 **Stacked Percentage Chart**
-:::
 
-::::
+- Use when you want to show the relative proportion or contribution of each category to the total.
+
+- Helpful for illustrating the distribution of percentages within categories across different groups or segments.
+
+- Suitable when you want to emphasize the composition or share of each category relative to the whole.
+:::
+:::
 
 ## Stacked Bar Chart: Disadvantages
 
--  It can be challenging to compare individual segments between different groups because they are not aligned horizontally.
+-   It can be challenging to compare individual segments between different groups because they are not aligned horizontally.
 
--  Small segments can be hard to interpret accurately when they are stacked on top of each other.
+-   Small segments can be hard to interpret accurately when they are stacked on top of each other.
+
+## Which is the best?
+
+::: columns
+::: {.column width="50%"}
+
+```{r, fig.height=10}
+pf2 |>
+  count(BMI_category, gender) |>      
+  group_by(BMI_category) |>
+  mutate(pct= prop.table(n) * 100) %>%
+  ggplot() + aes(BMI_category, pct, fill=gender) +
+  geom_bar(stat="identity",  position = 'dodge') +
+  ylab("Percentage") +
+  xlab("Gender")+
+  geom_text(aes(label = sprintf("%.1f%%", pct)), 
+            position = position_dodge(width = 0.9), vjust = -0.5, color = "black") + scale_fill_manual(values=c("#f768a1", "#1d91c0")) + labs(fill="Gender")
+```
+
+
+:::
+
+::: {.column width="50%"}
+
+```{r, fig.height=10}
+pf2 |>
+  count(BMI_category, gender) |>      
+  group_by(BMI_category) |>
+  mutate(pct= prop.table(n) * 100) %>%
+  ggplot() + aes(BMI_category, pct, fill=gender) +
+  geom_bar(stat="identity") +
+  ylab("Percentage") +
+  xlab("Gender")+
+  geom_text(aes(label=paste0(sprintf("%1.1f", pct),"%")),
+            position=position_stack(vjust=0.5)) + scale_fill_manual(values=c("#f768a1", "#1d91c0")) + labs(fill="Gender")
+```
+
+:::
+:::
+
+# Facet Bar Chart
+
+#
+
+**Facet by Gender**
+
+
+```{r, fig.height=10}
+pf2 |>
+  count(BMI_category, gender) |>      
+  group_by(BMI_category) |>
+  mutate(pct= prop.table(n) * 100) %>%
+  ggplot() + aes(BMI_category, pct, fill=gender) +
+  geom_bar(stat="identity",  position = 'dodge') +
+  ylab("Percentage") +
+  xlab("Gender")+
+  geom_text(aes(label = sprintf("%.1f%%", pct)), 
+            position = position_dodge(width = 0.9), vjust = -0.5, color = "black") + scale_fill_manual(values=c("#f768a1", "#1d91c0"))  + facet_wrap(vars(gender))
+```
+
+#
+
+**Facet by BMI Category**
+
+
+```{r, fig.height=10, fig.width=12}
+pf2 |>
+  count(BMI_category, gender) |>      
+  group_by(BMI_category) |>
+  mutate(pct= prop.table(n) * 100) %>%
+  ggplot() + aes(fill=BMI_category, pct, x=gender) +
+  geom_bar(stat="identity",  position = 'dodge') +
+  ylab("Percentage") +
+  xlab("Gender")+
+  geom_text(aes(label = sprintf("%.1f%%", pct)), 
+            position = position_dodge(width = 0.9), vjust = -0.5, color = "black") +  facet_wrap(vars(BMI_category), ncol=4)
+```
+
+
+# Some rules
+
+##
+
+1. Don't make them 3D: 3D charts can distort data and make it difficult to accurately interpret values.
+
+2. Don't use overly complex charts: Keep it simple. Overly complex charts can confuse the viewer and obscure the data.
+
+3. Don't use excessive colors: Too many colors can be distracting and make the chart hard to read. Stick to a simple color palette.
+
+4. Don't use misleading scales: Ensure the scales start at zero (when appropriate) and are consistent to avoid misrepresenting the data.
+
+5. Don't use pie charts for too many categories: Pie charts are hard to interpret with more than a few slices. Use a bar chart instead.
+
+6. Don't use inappropriate chart types: Match the chart type to the data you are presenting. For example, use line charts for trends over time and bar charts for comparing categories.
+
+---
+
+7. Don't omit axis labels and titles: Always label your axes and give your chart a clear, descriptive title.
+
+8. Don't clutter with too much information: Avoid adding unnecessary elements like excessive gridlines, text, or data points.
+
+9. Don't ignore accessibility: Ensure your charts are readable for people with color blindness by using colorblind-friendly palettes and providing text alternatives.
+
+10. Don't make legends and labels too small: Ensure that legends and labels are large enough to be easily read.
+
+11. Don't use default settings without customization: Default settings might not be the best for your data. Customize your charts to improve clarity and impact.
+
+12. Don't ignore data source and context: Always provide the data source and context to help the audience understand where the data comes from and its relevance.
