--- a/index.qmd
+++ b/index.qmd
@@ -58,8 +58,14 @@ Group assignment: 10%
 
 **Slides 5:** [Analysing Categorical Data](./week5/index.html)
 
+
+
 Group assignment help desk: 3.15PM - 4.00PM
 
-### Week 6: June 10, 2024 
 
-**Slides 6:** 
+
+### Week 6: June 10, 2024
+
+**Slides 6:** [Analysing Categorical Data - Two-way graphs](./week6/index.html)
+
+[Additional materials](./week5/tables.pdf)
