--- a/index.qmd
+++ b/index.qmd
@@ -58,14 +58,15 @@ Group assignment: 10%
 
 **Slides 5:** [Analysing Categorical Data](./week5/index.html)
 
-
-
 Group assignment help desk: 3.15PM - 4.00PM
-
-
 
 ### Week 6: June 10, 2024
 
 **Slides 6:** [Analysing Categorical Data - Two-way graphs](./week6/index.html)
 
 [Additional materials](./week5/tables.pdf)
+
+### Week 7: June 12, 2024
+
+
+Please visit Google Classroom to view the tasks for the tutorials on Wednesday, June 12, 2024 from 3.15PM to 4PM.
