--- a/week7/index.qmd
+++ b/week7/index.qmd
@@ -45,10 +45,9 @@ kable(smatrix_data) |>
 
 An ordered list makes it easier to find the highest and lowest values and see the range.
 
-
 ## Frequency Distribution
 
-A summary table in which data are arranged into ordered classes or categories to determine the number of observations belonging to each class. 
+A summary table in which data are arranged into ordered classes or categories to determine the number of observations belonging to each class.
 
 # Constructing a frequency distribution
 
@@ -61,7 +60,7 @@ kable(smatrix_data) |>
 
 ## Step 2: Decide on the number of classes (k)
 
-**Sturgess' Rule**
+**Sturges's Rule**
 
 $$\text{Number of classes} = 1+3.3log_{10}(N)$$
 
@@ -73,7 +72,7 @@ $$ 1+3.3log_{10}(50) = 6.606$$
 
 $$\text{Number of classes} = 7$$
 
-## Step 3: Calculate the class interval (CI)
+## Step 3: Calculate the class width/ class size/ class length (c)
 
 $$\text{width of interval} = \frac{\text{range}}{k}$$
 
@@ -83,10 +82,9 @@ $$\text{range = maximum - minimum}$$
 
 $$\frac{96-6}{7}=12.86$$
 
-$$\text{CI} \approx 13$$
+$$\text{c} \approx 13$$
 
-## Step 4: Claculate lower class limits/ class interval
-
+## Step 4: Claculate lower class limits
 
 $$6$$
 
@@ -105,21 +103,21 @@ $$43+13=62$$
 ## Step 5: Calculate class limits/ class intervals
 
 ```{r}
-df = data.frame(CL = c("6-18", "19-31", "32-44", "45-57", "58-70", "71-83", "84-96"))
+df = data.frame(CI = c("6-18", "19-31", "32-44", "45-57", "58-70", "71-83", "84-96"))
 df |> kable()
 ```
 
 ## Step 6: Prepare a tally sheet
 
 ```{r}
-df = data.frame(CL = c("6-18", "19-31", "32-44", "45-57", "58-70", "71-83", "84-96"),Tally = c("", "", "", "","", "", ""), Frequency= c(6, 6, 12, 6, 4, 8, 8))
+df = data.frame(CI = c("6-18", "19-31", "32-44", "45-57", "58-70", "71-83", "84-96"),Tally = c("", "", "", "","", "", ""), Frequency= c(6, 6, 12, 6, 4, 8, 8))
 df |> kable()
 ```
 
-## Class Boundaries
+## Step 7: Class Boundaries
 
 ```{r}
-df = data.frame(CL = c("6-18", "19-31", "32-44", "45-57", "58-70", "71-83", "84-96"),
+df = data.frame(CI = c("6-18", "19-31", "32-44", "45-57", "58-70", "71-83", "84-96"),
                 Boundaries = c("5.5-18.5", "18.5-31.5", "31.5-44.5", "44.5-57.5", "57.5-70.5", "70.5-83.5", "83.5-96.5"),
                 
             Frequency= c(6, 6, 12, 6, 4, 8, 8))
@@ -128,20 +126,20 @@ df |> kable()
 
 ## To find class boundaries
 
-1.  Subtract the first upper class limit from the second lower class limit and divide the difference by 2. 
+1.  Subtract the first upper class limit from the second lower class limit and divide the difference by 2.
 
-2. Subtract the value calculated in step 1
+2.  Subtract the value calculated in step 1
 
-    - from all of the lower class limits 
-    
-    - add to all of the upper class limits.
+    -   from all of the lower class limits
+
+    -   add to all of the upper class limits.
 
 <!--[Additional reading]( https://statisticstechs.weebly.com/desciptive-statistics/frequency-distribution-and-data-presentation)-->
 
 ## Idea Behind Class Boundaries
 
 ```{r}
-df = data.frame(CL = c("6-18", "19-31", "32-44", "45-57", "58-70", "71-83", "84-96"),
+df = data.frame(CI = c("6-18", "19-31", "32-44", "45-57", "58-70", "71-83", "84-96"),
                 Boundaries = c("(5.5, 18.5]", "(18.5, 31.5]", "(31.5, 44.5]", "(44.5, 57.5]", "(57.5, 70.5]", "(70.5, 83.5]", "(83.5, 96.5]"),
                 
             Frequency= c(6, 6, 12, 6, 4, 8, 8))
@@ -150,17 +148,20 @@ df |> kable()
 
 ## Size or width of a class interval (c)
 
-$$c= \text{difference between successive lower class limits}$$
+$$c= \text{difference between successive lower class limits\class boundaries}$$
+
+or
+
+$$c= \text{difference between successive upper class limits\class boundaries}$$
 
 or 
 
-$$c= \text{difference between successive upper class limits}$$
-
+$$c= \text{difference between successive upper class  boundary and its lower class boundary}$$
 > Example
 
 $$c=18.5-5.5=31.5-18.5=13$$
 
-## Class mark/ class midpoint
+## Step 8: Class mark/ class midpoint
 
 $$\text{class mark}=\frac{\text{upper limit} +\text{lower limit}}{2}$$
 
@@ -170,9 +171,8 @@ $$\text{class mark}=\frac{6+18}{2} = 12$$
 
 ## Class mark/ class midpoint
 
-
 ```{r}
-df = data.frame(CL = c("6-18", "19-31", "32-44", "45-57", "58-70", "71-83", "84-96"),
+df = data.frame(CI = c("6-18", "19-31", "32-44", "45-57", "58-70", "71-83", "84-96"),
                 Boundaries = c("5.5-18.5", "18.5-31.5", "31.5-44.5", "44.5-57.5", "57.5-70.5", "70.5-83.5", "83.5-96.5"), 
                 Mid_point = c(12, 25, 38, 51, 64, 77, 90),
                 
@@ -184,13 +184,13 @@ df |> kable()
 
 Compute
 
-1. Cumulative-frequency distribution
+1.  Cumulative-frequency distribution
 
-2. Percentage cumulative distributions
+2.  Percentage cumulative distributions
 
-4. Relative frequency distribution
+3.  Relative frequency distribution
 
-5. Relative cumulative frequency distribution
+4.  Relative cumulative frequency distribution
 
 ## Histogram
 
@@ -238,7 +238,7 @@ ggplot(data, aes(x = Mid_point, y = Frequency)) +
 
 ```
 
-##
+## 
 
 ```{r}
 data |> kable()
@@ -247,7 +247,6 @@ data |> kable()
 ## Cumulative Frequency Distribution
 
 The total frequency of all values less than the upper class boundary.
-
 
 ```{r}
 data2 <- data.frame(
@@ -274,16 +273,16 @@ ddmat <- matrix(dd, ncol=10)
  kable(ddmat) |>   kable_styling()
 ```
 
-##
+## 
 
 Construct
 
-1. Frequency distribution
+1.  Frequency distribution
 
-2. Histogram
+2.  Histogram
 
-3. Polygon
+3.  Polygon
 
-4. Cumulative frequency distribution
+4.  Cumulative frequency distribution
 
-5. Orgive
+5.  Orgive
