--- a/index.qmd
+++ b/index.qmd
@@ -81,3 +81,12 @@ Tutorial 2: Please visit Google Classroom to view the tasks for the tutorials on
 Note: Group assignment deadline is today.
 
 Tutorial 3: Please visit Google Classroom to view the tasks for the tutorials on Wednesday, June 19, 2024 from 3.15PM to 4PM.
+
+
+### Week 9: June 26, 2024
+
+**Slides 9:** [Stem and Leaf Plot, Dot plot, Individual value plot, Measures of Dispersion (Range, Variance, Standard deviation)](./week9/index.html)
+
+Tutorial 4: June 26, 2024 from 3.15PM to 4PM.
+
+Task: Week 7 slides 28-29 questions.
